<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_detail">

    <ProgressBar
        android:id="@+id/tv_progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

    <ImageView
        android:id="@+id/tv_image_poster"
        android:layout_width="180dp"
        android:layout_height="260dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@color/placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvshow_gen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_sb"
        android:text="@string/genre"
        android:textColor="@color/purple_200"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvshow_year"
        app:layout_constraintTop_toBottomOf="@+id/tvshow_year"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvshow_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_sb"
        android:text="@string/rating"
        android:textColor="@color/purple_200"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvshow_genre_detail"
        app:layout_constraintTop_toBottomOf="@+id/tvshow_genre_detail" />

    <TextView
        android:id="@+id/tvshow_genre_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_rg"
        android:paddingTop="5dp"
        android:text="@string/genre"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvshow_gen"
        app:layout_constraintTop_toBottomOf="@+id/tvshow_gen" />

    <TextView
        android:id="@+id/tvshow_rating_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/star"
        android:fontFamily="@font/poppins_rg"
        android:paddingTop="5dp"
        android:text="@string/rating"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvshow_rating"
        app:layout_constraintTop_toBottomOf="@+id/tvshow_rating"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/tvshow_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_sb"
        android:text="@string/title"
        android:textColor="@color/purple_200"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_image_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_image_poster"
        app:layout_constraintTop_toTopOf="@+id/tv_image_poster"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvshow_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_sb"
        android:text="@string/overview"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_image_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_image_poster" />

    <TextView
        android:id="@+id/tvshow_overview_det"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_lght"
        android:text="@string/overview"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvshow_overview"
        app:layout_constraintTop_toBottomOf="@+id/tvshow_overview" />

    <TextView
        android:id="@+id/tvshow_topcast_det"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins_lght"
        android:text="@string/topcast"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvshow_topcast"
        app:layout_constraintTop_toBottomOf="@+id/tvshow_topcast"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvshow_topcast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_sb"
        android:text="@string/topcast"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvshow_overview_det"
        app:layout_constraintTop_toBottomOf="@+id/tvshow_overview_det" />

    <TextView
        android:id="@+id/tvshow_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_lght"
        android:text="@string/year"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvshow_title"
        app:layout_constraintTop_toBottomOf="@+id/tvshow_title" />


</androidx.constraintlayout.widget.ConstraintLayout>